--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,9 @@
 .app.dark {
     --bg-color: rgb(27, 27, 157);
+    --inverted-bg-color: rgb(187, 187, 190);
+    
     --primary-color: rgb(81, 237, 81);
     --secondary-color: rgb(3, 100, 3);
+    --inverted-primary-color: rgb(2, 71, 2);
+    --inverted-secondary-color: rgb(19, 62, 19);
 }
