--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,9 @@
 .app.light {
     --bg-color: rgb(187, 187, 190);
+    --inverted-bg-color: rgb(27, 27, 157);
+
     --primary-color: rgb(2, 71, 2);
     --secondary-color: rgb(19, 62, 19);
+    --inverted-primary-color: rgb(81, 237, 81);
+    --inverted-secondary-color: rgb(3, 100, 3);
 }
