--- a/src/widgets/sidebar/ui/sidebar-component/sidebar.module.scss
+++ b/src/widgets/sidebar/ui/sidebar-component/sidebar.module.scss
@@ -14,7 +14,12 @@
     position: absolute;
     bottom: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+
+.languageSwitcher {
+    margin-top: 10px;
 }
