--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -4,7 +4,19 @@
     box-sizing: border-box;
 }
 
-input, button, textarea, select, h1, h2, h3, h4, h5, h6, p, span, div {
+input,
+button,
+textarea,
+select,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+div {
     margin: 0;
-    font: inherit   
+    font: inherit;
 }
